# simcardems2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  run0D.yml
demos/: ORdmm_Land.ode  config.toml  config.txt  create_geometry_with_surface_markers.py  main.py  main_using_config.py  validate_input_types.py
demos/consistency_checks_across_split_schemes/CaTrpn_split/: ORdmm_Land.ode  config.toml  land_CaTrpnsplit_consistent_with_zetasplit.py  main_catrpnsplit_consistent_with_zetasplit.py
demos/consistency_checks_across_split_schemes/cai_split/: config.toml  land_caisplit_consistent_with_zetasplit.py  main_caisplit_consistent_with_zetasplit.py
demos/split-cai/0D/: main.py  main_time_and_Ns.py
demos/split-cai/0D_ToRORd/: main_time_and_Ns_init_from_state.py
demos/split-cai/3D/: ORdmm_Land.ode  ToRORd_dynCl_endo_caisplit.ode  config.toml  main_using_config.py  main_using_config_time.py
demos/split-cai_catrpn/0D/: main.py  main_time_and_Ns.py
demos/split-cai_catrpn/0D_ToRORd/: main_time_and_Ns_init_from_state.py
demos/split-cai_catrpn/3D/: ORdmm_Land.ode  config.toml  main_using_config.py  main_using_config_time.py
demos/split-zeta/0D/: ORdmm_Land.ode  main.py  main_time_and_Ns.py
demos/split-zeta/0D_ToRORd/: main_time_and_Ns_init_from_state.py
demos/split-zeta/3D/: ORdmm_Land.ode  ToRORd_dynCl_endo_zetasplit.ode  config.toml  main_check_Ta.py  main_using_config.py  main_using_config_no_ep.py  main_using_config_time.py
demos/steady_state/: main_full_to_steady_state.py
numerical_experiments/0D/: split_cai.py  split_cai_catrpn.py  split_zeta.py  utils.py
numerical_experiments/3D/: create_geometry_with_surface_markers.py  split-cai.py  split-cai_catrpn.py  split-zeta.py  utils.py
src/simcardems2/: __init__.py  cli.py  interpolation.py  land.py  land_CaTrpn.py  land_CaTrpnsplit.py  land_Zetasplit.py  land_cai.py  land_caisplit.py  mechanicssolver.py  utils.py  validate_input_types.py
tests/: test_cli.py
